--- a/docker_example/index.html
+++ b/docker_example/index.html
@@ -1,6 +1,7 @@
 <div class="line"></div>
 <div class="wrapper">
   <header role="banner">
+    <link rel="stylesheet" type="text/css" href="docker_example.css">
     <nav role="navigation">
       <h1><a href="#">Asperion</a></h1>
       <ul class="nav-ul">
