--- a/docker_example/index.html
+++ b/docker_example/index.html
@@ -28,7 +28,7 @@
 		<main id="center" class="column">
 			<article>
 			
-				<h1>Test webhook</h1>
+				<h1>Heading</h1>
 				<p><script>generateText(50)</script></p>
 			
 			</article>								
